--- a/assets/style/all.css
+++ b/assets/style/all.css
@@ -13084,6 +13084,10 @@ body {
   .modal-xl {
     max-width: 90%; } }
 
+@media (max-width: 576px) {
+  .modal-xl {
+    max-width: 100%; } }
+
 /*--------------------首頁開始------------------*/
 /*--------------------內頁開始------------------*/
 .carousel {
