--- a/assets/style/all.css
+++ b/assets/style/all.css
@@ -12901,7 +12901,7 @@ body {
 /*--------------------側邊選單開始------------------*/
 .side-menu {
   width: 20%;
-  min-height: 100%;
+  height: 100%;
   margin-right: 48px;
   flex-shrink: 0;
   transition: all 0.2s ease;
@@ -12951,6 +12951,9 @@ body {
     align-items: center;
     font-size: 1rem;
     color: #7a7a7a; }
+  .side-menu-body {
+    overflow: auto;
+    height: calc(100% - 68px); }
 
 .side-info {
   width: 25%;
