--- a/assets/style/all.css
+++ b/assets/style/all.css
@@ -11337,20 +11337,32 @@ input::placeholder, textarea::placeholder {
     left: 0;
     top: 1rem;
     padding: 2px 0.75rem;
-    font-size: 0.9rem; }
+    font-size: 0.9rem;
+    z-index: 11; }
     @media (max-width: 576px) {
       .card-list-tag {
         font-size: 0.8rem;
         top: 0.75rem; } }
   .card-list-img {
-    margin-top: -64px;
-    width: 80%;
+    margin-top: -56px;
+    width: 90%;
     max-width: 240px;
     position: relative;
-    z-index: 10; }
+    z-index: 10;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem; }
+    @media (max-width: 1550px) {
+      .card-list-img {
+        margin-top: -48px; } }
+    @media (max-width: 1430px) {
+      .card-list-img {
+        margin-top: -40px; } }
+    @media (max-width: 767px) {
+      .card-list-img {
+        margin-top: 0; } }
     @media (max-width: 576px) {
       .card-list-img {
-        margin-top: 0.75rem;
+        margin-top: 30px;
         width: 100%; } }
   .card-list-circle {
     position: absolute;
@@ -11369,7 +11381,6 @@ input::placeholder, textarea::placeholder {
     color: #292929;
     font-size: 1.3rem;
     width: 100%;
-    margin-top: -16px;
     margin-bottom: 1rem; }
     @media (max-width: 1430px) {
       .card-list-title {
@@ -11378,7 +11389,7 @@ input::placeholder, textarea::placeholder {
     @media (max-width: 576px) {
       .card-list-title {
         font-size: 1.125rem;
-        margin-bottom: 1rem; } }
+        margin-bottom: 0.75rem; } }
   .card-list-txt {
     font-size: 0.95rem;
     color: #525252;
